<resources>
    <string name="app_name">Carbon Detective Go</string>
    <string name="badge">Badges</string>
    <string name="home">Home</string>
    <string name="go">Go</string>
    <string name="badge1">Take the first step</string>
    <string name="badge2">Under the moon</string>
    <string name="badge3">Faster than light</string>
    <string name="badge4">A foot to hundred</string>
    <string name="badge5">Are you tired</string>
    <string name="badge6">Stay tuned</string>
    <string name="lock">Locked</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
<!--carbon footprint-->
    <string name="kgCO2">kgCO2</string>
    <string name="calculate_result">Mileage:\n%1$s km\n\nCarbon footprint:\n%2$s kgCO2</string>
<!--    QA-->
    <string name="QA"><b>Q1: How to start tracking carbon footprint?</b>\nA1: Grant location permission, choose your mode of transportation, then click the start button. When you reach your destination, click the stop button.\n\n<b>Q2: Is it possible to switch transportation modes midway?</b>\nA2: Yes, but each recording will only calculate based on the last selected transportation mode.\n\n<b>Q3: How to unlock the yellow badge?</b>\nA3: No idea.（ᗜ ‸ ᗜ）</string>
    <string name="QA_about_us"><b>Q：What\'s “Carbon Detective Go”?</b>\nA：“Carbon Detective Go” is an app for people to record their carbon footprint easily.</string>
<!--location-->
    <string name="background_location_permission_granted">Permission granted</string>
    <string name="background_location_permission_denied">All-the-time permission denied</string>
    <string name="access_fine_location_permission_denied">No location permissions</string>

    <string name="background_location_permission_message">App currently can access location only while you\'re using the app.</string>
    <string name="ask_background_location_permission">Allow App to access this device\'s location all the time?</string>

    <string name="location_permission_message">Allow App to access this device\'s location. Then set Allow-all-the-time permission in Settings.</string>
    <string name="ask_location_permission">Allow App to access this device\'s location?</string>
    <string name="close">Close</string>
    <string name="bg1_description">Great to see you here. Let\'s Carbon Detective Go!</string>
    <string name="bg2_description">Under the stars and the moon, Carbon Detective Go still here with you.</string>
    <string name="bg3_description">You\'re breaking the speed of light! Are you a superhero?!</string>
    <string name="bg4_description">At the top of a hundred-kgCO2 pole, take one more step.</string>
    <string name="bg5_description">To rest is to prepare for a longer journey ahead. (Battery level below 20%)</string>
    <string name="setup_all_the_time_access">Setup All-the-time Access</string>
    <string name="keep_only_while_using_access">Keep Only-while-using Access</string>
    <string name="ok">OK</string>

    <string name="logo_description">&#160;&#160;Inspired by Taiwan CFP-Labeling. Team “DOiT” make a Carbon footprint-themed application.</string>
    <string name="word_cloud_description">&#160;&#160;Design based on the logo graphic. Incorporating keywords such as sustainable development, environmental awareness, carbon footprint tracking, and more.</string>
</resources>