<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".fragment.badge_fragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:text="@string/badge_fragment_title"
        android:textColor="@color/grass_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/badge5"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="412dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/badge5"
        android:focusable="true"
        android:onClick="onClick"
        android:scaleType="centerInside"
        android:src="@drawable/badge5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/badge1"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="52dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/badge1"
        android:focusable="true"
        android:onClick="onClick"
        android:scaleType="centerInside"
        android:src="@drawable/badge1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/badge2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/badge2"
        android:focusable="true"
        android:onClick="onClick"
        android:scaleType="centerInside"
        android:src="@drawable/badge2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/badge3"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="232dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/badge3"
        android:focusable="true"
        android:onClick="onClick"
        android:scaleType="centerInside"
        android:src="@drawable/badge3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/badge4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="412dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/badge4"
        android:focusable="true"
        android:onClick="onClick"
        android:scaleType="centerInside"
        android:src="@drawable/badge4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/badge6"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/badge6"
        android:focusable="true"
        android:onClick="onClick"
        android:scaleType="centerInside"
        android:src="@drawable/badge6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>